更改状态还没完成，但是要去同步窦卓的

--- a/app/src/main/res/layout/order_transport_detail.xml
+++ b/app/src/main/res/layout/order_transport_detail.xml
@@ -37,7 +37,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -46,13 +46,14 @@
                             android:layout_marginLeft="16dp"
                             android:layout_marginRight="16dp"
                             android:layout_marginTop="16dp"
+                            android:layout_centerVertical="true"
                             android:orientation="horizontal">
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="真实姓名"
+                                android:text="昵 称"
                                 android:textColor="@color/colorSub"
                                 android:textSize="18sp" />
 
@@ -66,33 +67,6 @@
                                 android:textSize="18sp" />
                         </LinearLayout>
 
-                        <LinearLayout
-
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_marginTop="16dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="昵称"
-                                android:textColor="@color/colorSub"
-                                android:textSize="18sp" />
-
-                            <TextView
-                                android:id="@+id/order_transport_detail_nickname"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.5"
-                                android:text="市委书记李达康"
-                                android:textColor="@color/colorTex"
-
-                                android:textSize="18sp" />
-                        </LinearLayout>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -101,10 +75,10 @@
                     android:id="@+id/my_order_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
+                    android:orientation="vertical"
                     android:layout_below="@+id/custom_info"
-                    android:orientation="vertical">
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true">
 
                     <LinearLayout
 
@@ -119,7 +93,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="物品类型"
+                            android:text="估计金额"
                             android:textColor="@color/colorSub"
                             android:textSize="18sp" />
 
@@ -198,19 +172,26 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="123dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="悬赏金额"
                             android:textColor="@color/colorSub"
                             android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/order_transport_detail_money"
+                            android:layout_width="33dp"
+                            android:layout_height="wrap_content"
+                            android:text="5"
+                            android:textColor="@color/colorTex"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/order_transport_detail_method"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
-                            android:text="5元"
+                            android:text="元"
                             android:textColor="@color/colorTex"
                             android:textSize="18sp" />
                     </LinearLayout>
