--- a/app/src/main/res/layout/order_myorder_detail.xml
+++ b/app/src/main/res/layout/order_myorder_detail.xml
@@ -31,7 +31,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="物品类型"
+                    android:text="估计金额"
                     android:textColor="@color/colorSub"
                     android:textSize="18sp" />
 
@@ -103,26 +103,33 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="114dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="悬赏金额"
+                    android:text="悬赏"
                     android:textColor="@color/colorSub"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/order_myorder_detail_money"
-                    android:layout_width="match_parent"
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:text="5"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/order_myorder_detail_method"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:text="5元"
+                    android:text="元"
                     android:textColor="@color/colorTex"
                     android:textSize="18sp" />
             </LinearLayout>
@@ -250,6 +257,15 @@
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
+                <TextView
+                    android:id="@+id/order_myorder_detail_review"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:text=" "
+                    android:textColor="@color/swiperefresh_color2"
+                    android:textSize="18sp" />
+
             </LinearLayout>
 
             <View
@@ -265,25 +281,25 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
-            android:layout_below="@+id/my_order_info"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/my_order_info"
+            android:padding="20dp">
 
             <ImageButton
                 android:id="@+id/order_myorder_detail_cancel"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@drawable/fab_back_bg"
                 android:layout_alignParentRight="true"
+                android:background="@drawable/fab_back_bg"
                 android:src="@drawable/fab_back" />
 
             <ImageButton
                 android:id="@+id/order_myorder_detail_phone"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@drawable/fab_phone_bg"
                 android:layout_alignParentLeft="true"
+                android:background="@drawable/fab_phone_bg"
                 android:src="@drawable/fab_phone" />
         </RelativeLayout>
 
