--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -102,6 +102,18 @@
                 android:textColor="@color/gray"
                 android:textSize="40px" />
 
+            <Spinner
+                android:id="@+id/my_sex_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@id/my_sex"
+                android:layout_toRightOf="@id/my_sex"
+                android:spinnerMode="dropdown"
+                android:layout_centerVertical="true"
+                android:background="@color/light_gray"
+                android:layout_alignParentTop="true"
+                />
+
         </RelativeLayout>
 
         <RelativeLayout
