--- a/app/src/main/res/layout/activity_register_validname.xml
+++ b/app/src/main/res/layout/activity_register_validname.xml
@@ -97,8 +97,8 @@
             android:layout_alignBottom="@+id/school_textview"
             android:layout_toRightOf="@+id/school_textview"
             android:spinnerMode="dialog"
-            android:gravity="center"
-            android:background="@color/base_color_text_gray"
+            android:layout_centerVertical="true"
+            android:background="@color/light_gray"
             android:layout_alignParentTop="true"
             />
 
