又是一丢丢修改

--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -84,13 +84,14 @@
                     android:layout_height="wrap_content"
                     android:text="悬赏"
                     android:textColor="@color/colorSub"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:layout_weight="0.01" />
 
                 <TextView
                     android:id="@+id/order_detail_money"
-                    android:layout_width="30dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text="5 "
                     android:textColor="@color/colorTex"
                     android:textSize="18sp" />
 
