--- a/app/src/main/res/layout/order_myorder_detail.xml
+++ b/app/src/main/res/layout/order_myorder_detail.xml
@@ -118,9 +118,9 @@
 
                 <TextView
                     android:id="@+id/order_myorder_detail_money"
-                    android:layout_width="30dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5"
+                    android:text=" 5 "
                     android:textColor="@color/colorTex"
                     android:textSize="18sp" />
 
