--- a/app/src/main/res/layout/order_transport_detail.xml
+++ b/app/src/main/res/layout/order_transport_detail.xml
@@ -180,9 +180,9 @@
 
                         <TextView
                             android:id="@+id/order_transport_detail_money"
-                            android:layout_width="33dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="5"
+                            android:text="5 "
                             android:textColor="@color/colorTex"
                             android:textSize="18sp" />
 
